--- a/CalculoICMS/calculoicms.html
+++ b/CalculoICMS/calculoicms.html
@@ -29,7 +29,7 @@
                                                 <span ng-show="!validacaoBase(valoresIcmsProprio.base)">Valor inválido!</span>
                                         </span>    
                                     </div>
-                                    <div class="form-group row" ng-class="{'has-error': !validacaoAliquotaNaoAceitaZero(valoresIcmsProprio.aliquota), 'has-success':validacaoAliquotaNaoAceitaZero(valoresIcmsProprio.aliquota)}">    
+                                    <div class="form-group row" ng-class="{'has-error': !validacaoBase(valoresIcmsProprio.aliquota), 'has-success':validacaoBase(valoresIcmsProprio.aliquota)}">    
                                         <label for="tbAliquotaIcmsProprio" class="col-sm-3 col-sm-offset-3 col-xs-3 col-xs-offset-3">Alíquota ICMS:</label>
                                         <div class="col-sm-3 col-xs-3">
                                             <div class="input-group">
@@ -38,7 +38,7 @@
                                             </div>
                                         </div>
                                         <span class="help-block" ng-show="icmsProprioForm.aliquotaIcmsProprio.$touched">
-                                                <span ng-show="!validacaoAliquotaNaoAceitaZero(valoresIcmsProprio.aliquota)">Valor inválido!</span>
+                                                <span ng-show="!validacaoBase(valoresIcmsProprio.aliquota)">Valor inválido!</span>
                                         </span>
                                     </div>
                                     <div class="form-group row">
@@ -90,7 +90,7 @@
                                     <div class="form-group row" ng-class="{'has-error': !validacaoBase(valoresIcmsBaseRed.base), 'has-success':validacaoBase(valoresIcmsBaseRed.base)}">
                                         <label for="lbBaseIcmsRed" class="col-sm-3 col-sm-offset-3 col-xs-3 col-xs-offset-3">Base de Calculo:</label>
                                         <div class="col-sm-3 col-xs-3">
-                                           <input type="number" ng-model="valoresIcmsBaseRed.base" class="form-control" name="baseIcmsRed"/>         
+                                           <input type="number" ng-model="valoresIcmsBaseRed.base" class="form-control" name="baseIcmsRed" required>         
                                         </div>
                                         <span class="help-block" ng-show="icmsRedForm.baseIcmsRed.$touched">
                                                 <span ng-show="!validacaoBase(valoresIcmsBaseRed.base)">Valor inválido!</span>
@@ -100,7 +100,7 @@
                                         <label for="lbAliquotaIcms" class="col-sm-3 col-sm-offset-3 col-xs-3 col-xs-offset-3">Alíquota ICMS:</label>
                                         <div class="col-sm-3 col-xs-3">
                                             <div class="input-group">
-                                                <input type="number" ng-model="valoresIcmsBaseRed.aliquota" class="form-control" name="aliquotaIcms"/>
+                                                <input type="number" ng-model="valoresIcmsBaseRed.aliquota" class="form-control" name="aliquotaIcms" required>
                                                 <span class="input-group-addon" id="percent-addon">%</span>
                                             </div>
                                         </div>
@@ -115,7 +115,7 @@
                                         <label for="lbAliquotaIcmsReduzida" class="col-sm-3 col-sm-offset-3 col-xs-3 col-xs-offset-3">Alíquota de Redução:</label>
                                         <div class="col-sm-3 col-xs-3">
                                             <div class="input-group">
-                                                <input type="number" ng-model="valoresIcmsBaseRed.aliquotaRed" class="form-control" name="aliquotaIcmsReduzida"/>
+                                                <input type="number" ng-model="valoresIcmsBaseRed.aliquotaRed" class="form-control" name="aliquotaIcmsReduzida" required>
                                                 <span class="input-group-addon" id="percent-addon">%</span>
                                             </div>
                                         </div>
@@ -128,7 +128,7 @@
                                     </div>
                                     <div class="form-group row">
                                         <div class="col-sm-6 col-sm-offset-3 col-xs-6 col-xs-offset-3">
-                                            <button type="button" class="btn btn-nmain btn-block" ng-click="resultadoIcmsRed()">Calcular</button>
+                                            <button type="button" class="btn btn-nmain btn-block" ng-click="resultadoIcmsRed()" ng-disabled="icmsRedForm.$invalid">Calcular</button>
                                         </div>
                                     </div>
                                     <div class="form-group row">    
@@ -227,7 +227,7 @@
                                     </div>
                                     <div class="form-group row">
                                         <div class="col-sm-6 col-sm-offset-3 col-xs-6 col-xs-offset-3">
-                                            <button type="button" class="btn btn-nmain btn-block" ng-click="resultadoIcmsDifal()">Calcular</button>
+                                            <button type="button" class="btn btn-nmain btn-block" ng-click="resultadoIcmsDifal()" ng-disabled="icmsDifalForm.$invalid">Calcular</button>
                                         </div>
                                     </div>
                                     <div class="form-group row">    
