--- a/CalculoICMS/calculoicms.html
+++ b/CalculoICMS/calculoicms.html
@@ -105,10 +105,7 @@
                                             </div>
                                         </div>
                                         <span class="help-block" ng-show="icmsRedForm.aliquotaIcms.$touched">
-                                            <div ng-messages="icmsRedForm.aliquotaIcms.$error" role="alert">
-                                                <div ng-message="required">Campo vazio!</div>
                                                 <span ng-show="!validacaoAliquotaNaoAceitaZero(valoresIcmsBaseRed.aliquota)">Valor inválido!</span>
-                                            </div>
                                         </span> 
                                     </div>
                                     <div class="form-group row" ng-class="{'has-error': !validacaoAliquotaNaoAceitaZero(valoresIcmsBaseRed.aliquotaRed), 'has-success':validacaoAliquotaNaoAceitaZero(valoresIcmsBaseRed.aliquotaRed)}">    
@@ -120,10 +117,7 @@
                                             </div>
                                         </div>
                                         <span class="help-block" ng-show="icmsRedForm.aliquotaIcmsReduzida.$touched">
-                                            <div ng-messages="icmsRedForm.aliquotaIcmsReduzida.$error" role="alert">
-                                                <div ng-message="required">Campo vazio!</div>
-                                                <span ng-show="!validacaoAliquotaNaoAceitaZero(valoresIcmsBaseRed.aliquotaRed)">Valor inválido!</span>
-                                            </div>
+                                            <span ng-show="!validacaoAliquotaNaoAceitaZero(valoresIcmsBaseRed.aliquotaRed)">Valor inválido!</span>
                                         </span> 
                                     </div>
                                     <div class="form-group row">
@@ -201,7 +195,7 @@
                                                 <span ng-show="!validacaoAliquotaNaoAceitaZero(valoresIcmsDifal.aliquotaInterna)">Valor inválido!</span>
                                         </span>
                                     </div>
-                                    <div class="form-group row" ng-class="{'has-error': !validacaoAliquotaNaoAceitaZero(valoresIcmsDifal.aliquotaInterestadual), 'has-success':validacaoAliquotaNaoAceitaZero(valoresIcmsDifal.aliquotaInterestadual)}">    
+                                    <div class="form-group row" ng-class="{'has-error': !validacaoAliquotaNaoAceitaZero(valoresIcmsDifal.aliquotaInterestadual) || !validacaoAliquotaInternaMaiorInterest(valoresIcmsDifal.aliquotaInterna, valoresIcmsDifal.aliquotaInterestadual), 'has-success':validacaoAliquotaNaoAceitaZero(valoresIcmsDifal.aliquotaInterestadual)}">    
                                         <label for="lbAliquitaInterest" class="col-sm-3 col-sm-offset-3 col-xs-3 col-xs-offset-3">Alíquota Interes.:</label>
                                         <div class="col-sm-3 col-xs-3">
                                             <div class="input-group">
@@ -211,6 +205,7 @@
                                         </div>
                                         <span class="help-block" ng-show="icmsDifalForm.aliquotaIcmsInterestadual.$touched">
                                                 <span ng-show="!validacaoAliquotaNaoAceitaZero(valoresIcmsDifal.aliquotaInterestadual)">Valor inválido!</span>
+                                                <span ng-show="!validacaoAliquotaInternaMaiorInterest(valoresIcmsDifal.aliquotaInterna, valoresIcmsDifal.aliquotaInterestadual)">Valor inválido!</span>
                                         </span>
                                     </div>
                                     <div class="form-group row"  ng-class="{'has-error': !validacaoAliquotaAceitaZero(valoresIcmsDifal.aliquotaFcp), 'has-success':validacaoAliquotaAceitaZero(valoresIcmsDifal.aliquotaFcp)}">    
