--- a/CalculoIPI/calculoipi.html
+++ b/CalculoIPI/calculoipi.html
@@ -3,7 +3,7 @@
         <div class="row vertical-center-row">
             <button type="button" class="btn btn-main btn-lg btn-block" data-toggle="modal" data-target="#ipiProprioModal">IPI Próprio</button>
             <br>
-            <button type="button" class="btn btn-main-voltar btn-lg btn-block" ng-click="voltar()">Voltar</button>
+            <button type="button" class="btn btn-main-sub btn-lg btn-block" ng-click="voltar()">Voltar</button>
         </div>
     </div>
 
@@ -56,8 +56,8 @@
                                             </div>
                                         </div>
                                         <div class="modal-footer">
-                                            <button type="button" class="btn btn-main" ng-click="limparIpiProprio()">Limpar</button>
-                                            <button type="button" class="btn btn-main" data-dismiss="modal">Fechar</button>
+                                            <button type="button" class="btn btn-main-sub" ng-click="limparIpiProprio()">Limpar</button>
+                                            <button type="button" class="btn btn-main-sub" data-dismiss="modal">Fechar</button>
                                         </div>
                                     </div>
                                 </form>
