--- a/CalculoST/stnormal.html
+++ b/CalculoST/stnormal.html
@@ -3,7 +3,7 @@
         <div class="row vertical-center-row">
             <button type="button" class="btn btn-main btn-lg btn-block" data-toggle="modal" data-target="#STProprioModal">ST Próprio</button>
             <br>
-            <button type="button" class="btn btn-main-voltar btn-lg btn-block" ng-click="voltar()">Voltar</button>
+            <button type="button" class="btn btn-main-sub btn-lg btn-block" ng-click="voltar()">Voltar</button>
         </div>
     </div>
     <!-- ST Modal Início -->
@@ -84,8 +84,8 @@
                                             </div>
                                         </div>
                                         <div class="modal-footer">
-                                            <button type="button" class="btn btn-main" ng-click="limparStProprio()">Limpar</button>
-                                            <button type="button" class="btn btn-main" data-dismiss="modal">Fechar</button>
+                                            <button type="button" class="btn btn-main-sub" ng-click="limparStProprio()">Limpar</button>
+                                            <button type="button" class="btn btn-main-sub" data-dismiss="modal">Fechar</button>
                                         </div>
                                     </div>
                             </form>
