Refatoração Total - Parte 02

--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,10 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href="./app/styles/DEPGodStyle.css">
+        <link rel="stylesheet" href="./app/styles/style.css">
+        <link rel="stylesheet" href="./app/styles/position.css">
+        <link rel="stylesheet" href="./app/styles/events.css">
+        <link rel="stylesheet" href="./app/styles/media_queries.css">
         <title>DEPGod Calculator</title>
     </head>
     <body>
