--- a/app/index.html
+++ b/app/index.html
@@ -4,11 +4,13 @@
         <base href="/">
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="./bower_components/font-awesome/css/font-awesome.min.css" />
         <link rel="stylesheet" href="./app/styles/style.css">
         <link rel="stylesheet" href="./app/styles/position.css">
         <link rel="stylesheet" href="./app/styles/events.css">
         <link rel="stylesheet" href="./app/styles/media_queries.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <title>DEPGod Calculator</title>
     </head>
     <body>
