Refatoração Geral - Parte 06

--- a/app/index.html
+++ b/app/index.html
@@ -61,5 +61,6 @@
         <script type="text/javascript" src="./scripts/models/icmsProprio_model.js"></script>
         <script type="text/javascript" src="./scripts/models/icmsRed_model.js"></script>
         <script type="text/javascript" src="./scripts/models/ipiproprio_model.js"></script>
+        <script type="text/javascript" src="./scripts/models/stproprio_model.js"></script>
     </body>
 </html>
